--- a/style.css
+++ b/style.css
@@ -138,3 +138,20 @@ h2 {
   width: 50px;
   height: 50px;
 }
+
+@media (max-width: 768px) {
+  #sidebarInfo {
+    position: static;
+    width: 100%;
+    height: auto;
+    border-left: none;
+    border-top: 3px solid #007acc;
+    box-shadow: none;
+    margin-top: 20px;
+  }
+
+  body {
+    flex-direction: column;
+    padding: 10px;
+  }
+}
